--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -82,26 +82,10 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
           DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!"}]'
-  dummy:
-    runs-on: ubuntu-20.04
-    needs: [changes]
-    steps:
-    - name: Prints
-      id: primts
-      run: |
-        echo "packages: -$packages-"
-        echo "services: -$services-"
-        if [ "$services" = "[]" ]; then
-         echo "here"
-        fi
-      env:
-        packages: ${{ needs.changes.outputs.packages }}
-        services: ${{ needs.changes.outputs.services }}
   tests:
     runs-on: ubuntu-20.04
     needs: [changes]
-    
-    if: success() && ${{ needs.changes.outputs.packages != '[]' && needs.changes.outputs.packages != '' }}
+    if: ${{ needs.changes.outputs.packages != '[]' && needs.changes.outputs.packages != '' }}
     timeout-minutes: 45
     strategy:
       matrix:
@@ -109,7 +93,6 @@ jobs:
         node-version: [14.x, 16.x]
     steps:
       - uses: actions/checkout@v2
-
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
@@ -163,8 +146,7 @@ jobs:
   docker-build:
     name: docker-build
     needs: [changes]
-    
-    if: success() && ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
+    if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -246,7 +228,7 @@ jobs:
   docker-retag:
     name: docker-retag
     needs: [changes]
-    if: success() && ${{ needs.changes.outputs.service_retag_list != '' }} && ${{ needs.changes.outputs.service_retag_list != '[]' }} && ${{ github.ref != 'refs/heads/master' }}
+    if: ${{ needs.changes.outputs.service_retag_list != '' }} && ${{ needs.changes.outputs.service_retag_list != '[]' }} && ${{ github.ref != 'refs/heads/master' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
