--- a/packages/amplication-git-push-webhook-service/package.json
+++ b/packages/amplication-git-push-webhook-service/package.json
@@ -18,8 +18,9 @@
     "docker:down": "docker-compose down --volumes"
   },
   "dependencies": {
+    "@amplication/logger": "^1.0.0",
     "@amplication/prisma-db": "^0.12.2",
-    "@nestjs/common": "8.2.3",
+    "@nestjs/common": "8.4.3",
     "@nestjs/config": "2.0.0",
     "@nestjs/core": "8.4.4",
     "@nestjs/microservices": "8.4.4",
@@ -27,12 +28,9 @@
     "@octokit/webhooks-types": "5.5.1",
     "eventsource": "^2.0.0",
     "kafkajs": "1.16.0",
-    "nest-winston": "1.6.2",
     "nestjs-prisma": "0.15.1",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "winston": "3.7.2",
-    "winston-cloud-logging": "1.0.2"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
