--- a/packages/amplication-kafka/package.json
+++ b/packages/amplication-kafka/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@nestjs/common": "8.4.4",
+    "@nestjs/core": "8.4.4",
     "@nestjs/microservices": "8.4.4",
     "dotenv": "16.0.0"
   }
