--- a/packages/amplication-kafka/package.json
+++ b/packages/amplication-kafka/package.json
@@ -42,6 +42,7 @@
     "@nestjs/common": "8.4.4",
     "@nestjs/core": "8.4.4",
     "@nestjs/microservices": "8.4.4",
-    "dotenv": "16.0.0"
+    "dotenv": "16.0.0",
+    "reflect-metadata": "0.1.13"
   }
 }
