added run id to retag list

--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -275,7 +275,9 @@ jobs:
             docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
             docker push $Docker_image
             export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$fixed_tag --output json | jq --raw-output --join-output '.images[0].imageManifest')
+            export TAG_LIST+=",${{ github.run_id }}"
             echo "FIXED MANIFEST: $MANIFEST"
+            echo "TAG_LIST: $TAG_LIST"
           fi
           sh .github/workflows/scripts/ecr_retag.sh
       - name: Discord notification
