--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -1,273 +1,113 @@
 name: CD-AWS
-
 on:
   workflow_dispatch:
- 
-
+    inputs:
+      target-env:
+        type: choice
+        description: To which environment to deploy
+        default: dev
+        required: true
+        options: 
+        - dev
+        - staging-os
+        - staging
+        - prod
+        - temp
+      source-branch:
+        type: string
+        description: Which branch to use for deployment
+        default: main
+        required: true
 jobs:       
-  changes:
+  deploy:
     runs-on: ubuntu-latest
-    outputs:
-      services: ${{ steps.build_list.outputs.service_build_list }}
-      service_retag_list: ${{ steps.build_list.outputs.service_retag_list }}
-      packages: ${{ steps.build_list.outputs.package_build_list }}
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: get changed files (not pr)
-        if: github.event_name != 'pull_request'
-        id: changed-files-not-pr
+      - name: set branch-name
         run: |
-          changed_files=$(git diff --name-only `git merge-base origin/master HEAD`)
-          while IFS= read -r changed_file ; do 
-            echo "changed_file: $changed_file"
-            if [[ "$changed_file" == *"packages/"* ]]; then
-              all_changed_files=$all_changed_files",$changed_file"
-            fi
-          done <<< "$changed_files"
-          all_changed_files="${all_changed_files:2}"
-          echo "all_changed_files: $all_changed_files"
-          echo "::set-output name=all_changed_files::$all_changed_files"
-      - name: get changed files (pr)
-        id: changed-files-pr
-        if: github.event_name == 'pull_request'
-        uses: tj-actions/changed-files@v17.3
-        with:
-          separator: ","
-          files_ignore: |
-            .github/**
-          files: |
-            packages/**
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8 #install the python needed
-      - name: create service build list
-        id: build_list
+            echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
+            echo "SOURCE_BRANCH_NAME=$(echo $SOURCE_BRANCH_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
         env:
-          CHANGED_FILES_PR: ${{ steps.changed-files-pr.outputs.all_changed_files }}
-          CHANGED_FILES_NOT_PR: ${{ steps.changed-files-not-pr.outputs.all_changed_files }}
+          SOURCE_BRANCH_NAME: ${{ github.event.inputs.source-branch }}
+      - name: calculate docker tags
+        id: calculate-docker-tags
         run: |
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          python .github/workflows/scripts/get-service-build-list.py
-          service_build_list=$(cat $GITHUB_WORKSPACE/service_build_list.json | jq -r .)
-          echo "service_build_list: $service_build_list"
-          echo "::set-output name=service_build_list::$service_build_list"
-
-          service_retag_list=$(cat $GITHUB_WORKSPACE/service_retag_list.json | jq -r .)
-          echo "service_retag_list: $service_retag_list"
-          echo "::set-output name=service_retag_list::$service_retag_list"
-
-          package_build_list=$(cat $GITHUB_WORKSPACE/package_build_list.json | jq -r .)
-          echo "package_build_list: $package_build_list"
-          echo "::set-output name=package_build_list::$package_build_list"
-      - name: Discord notification
-        if: failure()
-        uses: Ilshidur/action-discord@0.3.2
+          sh ./.github/workflows/scripts/build-values-command.sh
         env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
-          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!"}]'
-  tests:
-    runs-on: ubuntu-20.04
-    needs: [changes]
-    if: ${{ needs.changes.outputs.packages != '[]' && needs.changes.outputs.packages != '' }}
-    timeout-minutes: 45
-    strategy:
-      matrix:
-        package: ${{ fromJson(needs.changes.outputs.packages) }}
-        node-version: [14.x, 16.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node modules
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.npm
-            node_modules
-            */*/node_modules
-          key: PUSH-${{ runner.os }}-${{matrix.node-version}}-${{matrix.package}}-${{ hashFiles(format('{0}/package-lock.json',matrix.package.path)) }}
-          restore-keys: |
-            PUSH-${{ runner.os }}-${{matrix.node-version}}-${{matrix.package}}-
-            PUSH-${{ runner.os }}-${{matrix.node-version}}-
-            PUSH-${{ runner.os }}-
-
-      - name: Install Node.js dependencies
-        run: npm ci --cache ~/.npm --prefer-offline --only=production --silent
-
-      - name: Install package dependencies
-        id: install
-        run: lerna bootstrap --scope=${{matrix.package}} --include-dependencies
-
-      - name: Build Prisma client
-        id: prisma
-        run: lerna run --scope=${{matrix.package}} prisma:generate
-
-      - name: Build code
-        id: build
-        run: lerna run --scope=${{matrix.package}} --loglevel=silent build --include-dependencies
-
-      - name: Format code
-        id: format
-        run: lerna run --scope=${{matrix.package}} --loglevel=silent check-format
-
-      - name: Lint code
-        id: lint
-        run: lerna run --scope=${{matrix.package}} --loglevel=silent lint
-
-      - name: Run tests
-        id: test
-        run: lerna run --scope=${{matrix.package}} --loglevel=silent test
-
-      - name: Discord notification
-        if: failure()
-        uses: Ilshidur/action-discord@0.3.2
+          TARGET_ENV: ${{ github.event.inputs.target-env }}
+      - name: set name space
+        id: set name space
+        run: |
+          NAMESPACE=$TARGET_ENV
+          if [ "$TARGET_ENV" = "temp" ]; then
+            NAMESPACE+="-$SOURCE_BRANCH_NAME"
+          fi
+          echo "Will deploy to $NAMESPACE"
+          echo "NAMESPACE=$NAMESPACE" >> $GITHUB_ENV
         env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
-          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"},{"name":"Install","value":"${{ steps.install.outcome }}","inline":true},{"name":"Build","value":"${{ steps.build.outcome }}","inline":true},{"name":"Test","value":"${{ steps.test.outcome }}","inline":true},{"name":"Format","value":"${{ steps.format.outcome }}","inline":true},{"name":"Lint","value":"${{ steps.lint.outcome }}","inline":true}]}]'
-  docker-build:
-    name: docker-build
-    needs: [changes]
-    if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-        service: ${{ fromJSON(needs.changes.outputs.services) }} 
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-            
-      - name: Configure AWS credentials
+          TARGET_ENV: ${{ github.event.inputs.target-env }}
+      - name: set cluster name
+        id: set-cluster-name
+        run: |
+          CLUSTER_NAME="useast1-$TARGET_ENV"
+          if [ "$TARGET_ENV" = "temp" ]; then
+            CLUSTER_NAME="useast1-dev"
+          fi
+          echo "Will deploy to $CLUSTER_NAME eks cluster"
+          echo "CLUSTER_NAME=$CLUSTER_NAME" >> $GITHUB_ENV
+        env:
+          TARGET_ENV: ${{ github.event.inputs.target-env }}
+      - name: set repo url
+        id: set-repo-url
+        run: |
+          REPO_URL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY"
+          echo "REPO_URL = $REPO_URL"
+          echo "REPO_URL=$REPO_URL" >> $GITHUB_ENV
+      - name: set app name
+        id: set-app-name
+        run: |
+          APP_NAME="amplication-$NAMESPACE"
+          echo "APP_NAME = $APP_NAME"
+          echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
+      - name: create app yaml
+        id: create-app-yaml
+        run: |
+          cp ./argocd/app.yaml app.yaml
+          sed -i "s|APP_NAME_PLACE_HOLER|$APP_NAME|g" app.yaml
+          sed -i "s|REPO_URL_PLACE_HOLER|$REPO_URL|g" app.yaml
+          sed -i "s|BRANCH_NAME_PLACE_HOLER|$GITHUB_REF_NAME|g" app.yaml
+          sed -i "s|NAMESPACE_PLACE_HOLER|$NAMESPACE|g" app.yaml
+          cat app.yaml
+        env:
+          TARGET_ENV: ${{ github.event.inputs.target-env }}
+      - name: configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
           aws-region: us-east-1
+      - name: deploy app
+        id: deploy-app
+        run: |
+          aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
+          COMMONM_VALUES_FILE="$GITHUB_WORKSPACE/helm/charts/amplication/values-common.yaml"
+          ENV_VALUES_FILE="$GITHUB_WORKSPACE/helm/charts/amplication/values-$TARGET_ENV.yaml"
+          ARGO_CD_URL="argocd.amplication-$TARGET_ENV.com"
+          if [ "$TARGET_ENV" = "temp"]; then
+            ENV_VALUES_FILE="$GITHUB_WORKSPACE/helm/charts/amplication/values-dev.yaml"
+            ARGO_CD_URL="argocd.amplication-dev.com"
+          fi
           
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+          kubectl apply -f app.yaml
 
-      - name: Set ecr repository
-        run: |
-          sh .github/workflows/scripts/get_ecr_repository.sh
+          COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
+          echo "$COMMAND"
+          $COMMAND
+          COMMAND="argocd app set $APP_NAME --values $COMMONM_VALUES_FILE --values $ENV_VALUES_FILE $VERSIONS"
+          echo "$COMMAND"
+          $COMMAND
         env:
-          SERVICE_NAME: ${{ matrix.service }}
-      - name: Set hash
-        env:
-          working-directory: packages/${{ matrix.service }}
-        run: |
-          GITHUB_HASH_MOD=$(find ./packages/${{ matrix.service }} -type f \( -exec sha1sum {} \; \) | awk '{print $1}' | sort | sha1sum)
-          echo "GITHUB_HASH=${GITHUB_HASH_MOD%???}" >> $GITHUB_ENV
-          echo $GITHUB_HASH
-      - name: Check if repo exist
-        working-directory: packages/${{ matrix.service }}
-        run: |
-          aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --repository-name $ECR_REPOSITORY
-      - name: Check if tag already exist
-        id: tag-exist
-        run: |
-          set +e
-          cmd="$(aws ecr describe-images --repository-name=$ECR_REPOSITORY --image-ids=imageTag=$GITHUB_HASH)"
-          if [[ ! -z "$cmd" ]]
-          then  
-            echo "tag already exist"
-            echo "::set-output name=tag_exist::true"
-          else
-            echo "tag doesn't exist"
-            echo "::set-output name=tag_exist::false"
-          fi
-      
-      - name: set branch-name
-        run: |
-          if [[ $GITHUB_REF != 'refs/heads/master' ]]
-          then 
-            echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
-          fi
-
-      - name: Build, tag, and push image to Amazon ECR
-        if: ${{ steps.tag-exist.outputs.tag_exist == 'false' }}
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          TAG_LIST: "${{ github.ref_name }},${{ github.run_id }},${{ github.sha }}"
-        run: |
-          Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
-          docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
-          docker push $Docker_image
-          MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
-          sh .github/workflows/scripts/ecr_retag.sh
-      - name: Discord notification
-        if: failure()
-        uses: Ilshidur/action-discord@0.3.2
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
-          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
-  docker-retag:
-    name: docker-retag
-    needs: [changes]
-    if: ${{ needs.changes.outputs.service_retag_list != '[]' && needs.changes.outputs.service_retag_list != '' && github.ref != 'refs/heads/master' }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-        service: ${{ fromJSON(needs.changes.outputs.service_retag_list) }} 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+          TARGET_ENV: ${{ github.event.inputs.target-env }}
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-          aws-region: us-east-1
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-      - name: Set ecr repository
-        run: |
-          sh .github/workflows/scripts/get_ecr_repository.sh
-        env:
-          SERVICE_NAME: ${{ matrix.service }}
-      - name: set branch-name
-        run: |
-          if [[ $GITHUB_REF != 'refs/heads/master' ]]
-          then 
-            echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
-          fi
-      - name: Check if repo exist
-        working-directory: packages/${{ matrix.service }}
-        run: |
-          aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --repository-name $ECR_REPOSITORY
-      - name: Retag images
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          TAG_LIST: ${{ github.ref_name }}
-        run: |
-          MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=master --output json | jq --raw-output --join-output '.images[0].imageManifest')
-          if [ "$MANIFEST" = "null" ]
-          then
-            fixed_tag=$(echo ${{ github.ref_name }} | sed 's/[^a-zA-Z0-9]/-/g')
-            Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$fixed_tag
-            docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
-            docker push $Docker_image
-            export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$fixed_tag --output json | jq --raw-output --join-output '.images[0].imageManifest')
-            echo "FIXED MANIFEST: $MANIFEST"
-          fi
-          sh .github/workflows/scripts/ecr_retag.sh
-      - name: Discord notification
-        if: failure()
-        uses: Ilshidur/action-discord@0.3.2
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
-          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
+          ARGO_CD_PASSWORD: ${{ secrets.ARGO_CD_PASSWORD }}
+      
