--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -42,6 +42,7 @@ pvc:
 postgres:
   install: false
   postgresqlUsername: postgres
+  postgresPassword: postgres
   db: amplication
   fullnameOverride: postgresql
   postgresql:
