fixed argocd url

--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -96,11 +96,13 @@ jobs:
           aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
           COMMONM_VALUES_FILE="$GITHUB_WORKSPACE/helm/charts/amplication/values-common.yaml"
           ENV_VALUES_FILE="$GITHUB_WORKSPACE/helm/charts/amplication/values-$TARGET_ENV.yaml"
-          ARGO_CD_URL="argocd.amplication-$TARGET_ENV.com"
-          # if [ "$TARGET_ENV" = "temp" ]; then
-          #   ENV_VALUES_FILE="$GITHUB_WORKSPACE/helm/charts/amplication/values-dev.yaml"
-          #   ARGO_CD_URL="argocd.amplication-dev.com"
-          # fi
+          ARGO_CD_URL="argocd.$TARGET_ENV.amplication-dev.com"
+          if [ "$GITHUB_REPOSITORY" = "amplication-hosted" ]; then
+            ARGO_CD_URL="argocd.$TARGET_ENV.amplication.com"
+            if [ "$TARGET_ENV" = "prod" ]; then
+              ARGO_CD_URL="argocd.amplication.com"
+            fi
+          fi
           
           kubectl apply -f app.yaml
 
