fixed bash syntax

--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -105,8 +105,7 @@ jobs:
           fi
           
           kubectl apply -f app.yaml
-          TARGET_ENV_SECRET=${TARGET_ENV^^}
-          export TARGET_ENV_SECRET=${-/_/"$TARGET_ENV_SECRET"}
+          export TARGET_ENV_SECRET=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
           echo "TARGET_ENV_SECRET: $TARGET_ENV_SECRET"
           COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
           echo "$COMMAND"
